--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,9 @@
     
     <!--CONTENIDO-->
     <div class="example-sidenav-content">
-  
+      <main>
+        <app-users></app-users>
+      </main>
     </div>
     <!--/CONTENIDO-->
   </mat-drawer-container>
