--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,7 +4,8 @@
   }
   
   .example-sidenav-content {
-    display: flex;
+    // display: flex;
+    padding: 1rem;
     height: 100%;
     align-items: center;
     justify-content: center;
