app funcionando, se actualizan datos de la tabla en tiempo real, y se crearon directivas personalizadas para modificar el tamaño de la fuente

--- a/src/app/dashboard/pages/users/components/users-dialog/users-dialog.component.html
+++ b/src/app/dashboard/pages/users/components/users-dialog/users-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
-{{ user ? "Editar Usuario" : "Crear Usuario" }}    
+{{ user ? "Editar Alumno" : "Crear Registro de Alumno" }}    
 </h1>
 
 <div mat-dialog-content>
