se creó el servicio de usuarios, se utilizó observable y se muestra la data con pipe async

--- a/src/app/dashboard/components/toolbar/toolbar.component.html
+++ b/src/app/dashboard/components/toolbar/toolbar.component.html
@@ -1,7 +1,5 @@
    <!--TOOLBAR-->
-   <mat-toolbar 
-   color="primary"
-   >
+   <mat-toolbar class="" color="primary">
     <div>
         <button mat-icon-button 
         (click)="toggleSidebar.emit()" 
@@ -13,10 +11,6 @@
         <span> Administración Alumnos </span>
         
     </div>
-
-       
-
-   
  
   </mat-toolbar>
   <!-- /TOOLBAR-->
