--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,13 +1,13 @@
 
 <mat-nav-list>
 
-    <mat-list-item>
-        <a>Home</a>
+    <mat-list-item routerLink="home">
+        <a >Home</a>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item routerLink="users" [activated]="true">
         <a>Users</a>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item routerLink="courses">
         <a>Cursos</a>
     </mat-list-item>
     <mat-list-item>
