--- a/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
+++ b/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
@@ -19,30 +19,30 @@
       <!-- Start Date Column -->
     <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef> Fecha Inicio </th>
-        <td mat-cell *matCellDef="let course"> {{course.startDate}} </td>
+        <td mat-cell *matCellDef="let course"> {{course.startDate | date }} </td>
       </ng-container>
   
      <!-- End Date Column -->
       <ng-container matColumnDef="endDate">
         <th mat-header-cell *matHeaderCellDef> Fecha Término </th>
-        <td mat-cell *matCellDef="let course">  {{course.endDate}}
+        <td mat-cell *matCellDef="let course">  {{course.endDate | date }}
         </td>
     </ng-container>
     
     <!-- actions Column -->
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let user"> 
+        <td mat-cell *matCellDef="let course"> 
           
-          <!-- <button (click)="viewDetail(user.id)" mat-raised-button color="accent">
+          <button mat-raised-button color="accent">
                 <mat-icon>visibility</mat-icon>
           </button>
-          <button (click)="onEditUser.emit(user)" mat-raised-button color="primary">
+          <button (click)="editCourse.emit(course)" mat-raised-button color="primary">
                 <mat-icon>edit</mat-icon>
           </button>
-          <button (click)="deleteUser.emit(user.id)" mat-raised-button color="warn">
+          <button (click)="deleteCourse.emit(course.id)"  mat-raised-button color="warn">
                 <mat-icon>delete</mat-icon> 
-            </button> -->
+            </button>
         </td>
     </ng-container>
   
