--- a/src/app/dashboard/pages/courses/components/courses-dialog/courses-dialog.component.html
+++ b/src/app/dashboard/pages/courses/components/courses-dialog/courses-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
-    {{ course ? "Editar Curso" : "Crear Registro de Curso" }}    
+    {{ isEditing ? "Editar Curso" : "Crear Registro de Curso" }}    
     </h1>
     
     <div mat-dialog-content>
@@ -9,7 +9,7 @@
                 <div class="col-12">
                     <mat-form-field  class="w-100">
                         <mat-label>Nombre</mat-label>
-                        <input formControlName="name" matInput />
+                        <input [formControl]="nameControl" matInput />
                         <div *ngIf="courseForm.get('name')?.hasError('required') && courseForm.get('name')?.touched">
                             Este campo es obligatorio.
                         </div>
@@ -22,9 +22,17 @@
                 <div class="col-6">
                     <mat-form-field class="w-100">
                         <mat-label>Fecha de Inicio</mat-label>
-                        <input formControlName="startDate" matInput [matDatepicker]="picker" placeholder="Selecciona una Fecha"/>
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
+                        <input 
+                        [formControl] ="startDateControl" 
+                        matInput 
+                        [matDatepicker]="startDatePicker" 
+                        placeholder="Selecciona una Fecha"
+                        />
+                        <mat-datepicker-toggle 
+                        matSuffix 
+                        [for]="startDatePicker"
+                        ></mat-datepicker-toggle>
+                        <mat-datepicker #startDatePicker></mat-datepicker>
                         <div *ngIf="courseForm.get('startDate')?.hasError('required') && courseForm.get('name')?.touched">
                             Debes seleccionar una fecha.
                         </div>
@@ -33,9 +41,13 @@
                 <div class="col-6">
                     <mat-form-field class="w-100">
                         <mat-label>Fecha de Término</mat-label>
-                        <input formControlName="endDate" matInput [matDatepicker]="picker2" />
-                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                        <mat-datepicker #picker2></mat-datepicker>
+                        <input [formControl]="endDateControl" 
+                        matInput 
+                        [matDatepicker]="endDatePicker"/>
+                        <mat-datepicker-toggle 
+                        matSuffix 
+                        [for]="endDatePicker"></mat-datepicker-toggle>
+                        <mat-datepicker #endDatePicker></mat-datepicker>
                         <div *ngIf="courseForm.get('startDate')?.hasError('required') && courseForm.get('name')?.touched">
                             Debes seleccionar una fecha.
                         </div>
