--- a/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
+++ b/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
@@ -34,10 +34,10 @@
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let course"> 
           
-          <button mat-raised-button color="accent">
+          <button [routerLink]="course.id" mat-raised-button color="accent">
                 <mat-icon>visibility</mat-icon>
           </button>
-          <button (click)="editCourse.emit(course)" mat-raised-button color="primary">
+          <button (click)="editCourse.emit(course.id)" mat-raised-button color="primary">
                 <mat-icon>edit</mat-icon>
           </button>
           <button (click)="deleteCourse.emit(course.id)"  mat-raised-button color="warn">
