se crea servicio de api, se consumen datos de json server, se implementa lazyloading, se crea componente de login, y se agrega guard

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -16,5 +16,9 @@
     <mat-list-item>
         <a>Inscripciones</a>
     </mat-list-item>
-     
+
+     <mat-list-item mat-raised-button  color="accent" (click)="logout()">
+        <a>Logout</a>
+    </mat-list-item>
+
 </mat-nav-list>
