--- a/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
+++ b/src/app/dashboard/pages/courses/components/courses-table/courses-table.component.html
@@ -19,13 +19,13 @@
       <!-- Start Date Column -->
     <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef> Fecha Inicio </th>
-        <td mat-cell *matCellDef="let course"> {{course.startDate | date }} </td>
+        <td mat-cell *matCellDef="let course"> {{course.startDate | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
   
      <!-- End Date Column -->
       <ng-container matColumnDef="endDate">
         <th mat-header-cell *matHeaderCellDef> Fecha Término </th>
-        <td mat-cell *matCellDef="let course">  {{course.endDate | date }}
+        <td mat-cell *matCellDef="let course">  {{course.endDate | date: 'dd/MM/yyyy'}}
         </td>
     </ng-container>
     
