--- a/src/app/dashboard/pages/courses/components/courses-dialog/courses-dialog.component.html
+++ b/src/app/dashboard/pages/courses/components/courses-dialog/courses-dialog.component.html
@@ -1,64 +1,85 @@
 <h1 mat-dialog-title>
-    {{ isEditing ? "Editar Curso" : "Crear Registro de Curso" }}    
-    </h1>
-    
-    <div mat-dialog-content>
-        <!-- Contenido -->
-        <form [formGroup]="courseForm">
-            <div class="row">
-                <div class="col-12">
-                    <mat-form-field  class="w-100">
-                        <mat-label>Nombre</mat-label>
-                        <input [formControl]="nameControl" matInput />
-                        <div *ngIf="courseForm.get('name')?.hasError('required') && courseForm.get('name')?.touched">
-                            Este campo es obligatorio.
-                        </div>
-                        <div *ngIf="courseForm.get('name')?.hasError('minlength') && courseForm.get('name')?.touched">
-                            El nombre debe tener como mínimo 3 caracteres.
-                        </div>
-                    </mat-form-field>
-                    
-                </div>
-                <div class="col-6">
-                    <mat-form-field class="w-100">
-                        <mat-label>Fecha de Inicio</mat-label>
-                        <input 
-                        [formControl] ="startDateControl" 
-                        matInput 
-                        [matDatepicker]="startDatePicker" 
-                        placeholder="Selecciona una Fecha"
-                        />
-                        <mat-datepicker-toggle 
-                        matSuffix 
-                        [for]="startDatePicker"
-                        ></mat-datepicker-toggle>
-                        <mat-datepicker #startDatePicker></mat-datepicker>
-                        <div *ngIf="courseForm.get('startDate')?.hasError('required') && courseForm.get('name')?.touched">
-                            Debes seleccionar una fecha.
-                        </div>
-                    </mat-form-field>
-                </div>
-                <div class="col-6">
-                    <mat-form-field class="w-100">
-                        <mat-label>Fecha de Término</mat-label>
-                        <input [formControl]="endDateControl" 
-                        matInput 
-                        [matDatepicker]="endDatePicker"/>
-                        <mat-datepicker-toggle 
-                        matSuffix 
-                        [for]="endDatePicker"></mat-datepicker-toggle>
-                        <mat-datepicker #endDatePicker></mat-datepicker>
-                        <div *ngIf="courseForm.get('startDate')?.hasError('required') && courseForm.get('name')?.touched">
-                            Debes seleccionar una fecha.
-                        </div>
-                    </mat-form-field>
-                </div>
-    
-                </div>
-        </form>
+  {{ isEditing ? "Editar Curso" : "Crear Registro de Curso" }}
+</h1>
+
+<div mat-dialog-content>
+  <!-- Contenido -->
+  <form [formGroup]="courseForm">
+    <div class="row">
+      <div class="col-12">
+        <mat-form-field class="w-100">
+          <mat-label>Nombre</mat-label>
+          <input [formControl]="nameControl" matInput />
+          <div
+            *ngIf="
+              courseForm.get('name')?.hasError('required') &&
+              courseForm.get('name')?.touched
+            "
+          >
+            Este campo es obligatorio.
+          </div>
+          <div
+            *ngIf="
+              courseForm.get('name')?.hasError('minlength') &&
+              courseForm.get('name')?.touched
+            "
+          >
+            El nombre debe tener como mínimo 3 caracteres.
+          </div>
+        </mat-form-field>
+      </div>
+      <div class="col-6">
+        <mat-form-field class="w-100">
+          <mat-label>Fecha de Inicio</mat-label>
+          <input
+            [formControl]="startDateControl"
+            matInput
+            [matDatepicker]="startDatePicker"
+            placeholder="Selecciona una Fecha"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="startDatePicker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #startDatePicker></mat-datepicker>
+          <div
+            *ngIf="
+              courseForm.get('startDate')?.hasError('required') &&
+              courseForm.get('name')?.touched
+            "
+          >
+            Debes seleccionar una fecha.
+          </div>
+        </mat-form-field>
+      </div>
+      <div class="col-6">
+        <mat-form-field class="w-100">
+          <mat-label>Fecha de Término</mat-label>
+          <input
+            [formControl]="endDateControl"
+            matInput
+            [matDatepicker]="endDatePicker"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="endDatePicker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #endDatePicker></mat-datepicker>
+          <div
+            *ngIf="
+              courseForm.get('startDate')?.hasError('required') &&
+              courseForm.get('name')?.touched
+            "
+          >
+            Debes seleccionar una fecha.
+          </div>
+        </mat-form-field>
+      </div>
     </div>
-    
-    <div mat-dialog-actions>
-        <button mat-dialog-close mat-button color="primary">Cancelar</button>
-        <button (click)="onSubmit()" color="primary"  mat-button>Guardar</button>
-    </div>
+  </form>
+</div>
+
+<div mat-dialog-actions>
+  <button mat-dialog-close mat-button color="primary">Cancelar</button>
+  <button (click)="onSubmit()" color="primary" mat-button>Guardar</button>
+</div>
